WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72788
MHTML: the base url is not correct when the frame committed notification happens.
https://bugs.webkit.org/show_bug.cgi?id=72788
Summary
MHTML: the base url is not correct when the frame committed notification happ...
Jay Civelli
Reported
2011-11-18 23:13:49 PST
When loading a MHTML document, we set the base URL to the actual URL of the encoded document. This is done right after the notification that the frame was committed. It should be done before, so when the notification happens the base URL is correctly set on the document.
Attachments
Patch
(1.81 KB, patch)
2011-11-18 23:21 PST
,
Jay Civelli
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jay Civelli
Comment 1
2011-11-18 23:21:41 PST
Created
attachment 115933
[details]
Patch
WebKit Review Bot
Comment 2
2011-11-19 00:45:18 PST
Comment on
attachment 115933
[details]
Patch Clearing flags on attachment: 115933 Committed
r100852
: <
http://trac.webkit.org/changeset/100852
>
WebKit Review Bot
Comment 3
2011-11-19 00:45:23 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug