When loading a MHTML document, make sure we set the base URL before we notify the frame was committed (so the document has the right base URL when the notification happens). https://bugs.webkit.org/show_bug.cgi?id=72788

Reviewed by Adam Barth.

* loader/FrameLoader.cpp:
(WebCore::FrameLoader::receivedFirstData):


git-svn-id: svn://svn.chromium.org/blink/trunk@100852 bbb929c8-8fbe-4397-9dbb-9b2b20218538