third_party/WebKit/Source/WebCore/loader/FrameLoader.cpp
@@ -575,9 +575,6 @@ void FrameLoader::receivedFirstData()
     activeDocumentLoader()->writer()->begin(workingURL, false);
     activeDocumentLoader()->writer()->setDocumentWasLoadedAsPartOfNavigation();
 
-    dispatchDidCommitLoad();
-    dispatchDidClearWindowObjectsInAllWorlds();
-
 #if ENABLE(MHTML)
     if (m_archive) {
         // The origin is the MHTML file, we need to set the base URL to the document encoded in the MHTML so
@@ -585,6 +582,9 @@ void FrameLoader::receivedFirstData()
         m_frame->document()->setBaseURLOverride(m_archive->mainResource()->url());
     }
 #endif
+
+    dispatchDidCommitLoad();
+    dispatchDidClearWindowObjectsInAllWorlds();
 
     if (m_documentLoader) {
         StringWithDirection ptitle = m_documentLoader->title();
